--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,27 +1,28 @@
-.app-bar{
-    /* Temporary Style */
-    /* margin-top: 80px; */
-    /* Permanent Style */   
-    /* padding: 7px;  */
+.app-bar {
+    background-color: aliceblue;
 }
-.logo-img{
+
+.logo-img {
     height: 'auto';
-    width: 100px;
-    filter: drop-shadow(1px 1px 1px white);
-    cursor: pointer;    
+    width: 70px;
+    /* filter: drop-shadow(5px 5px 10px grey); */
+    cursor: pointer;
 }
-.logo-img:hover{
+
+.logo-img:hover {
     filter: drop-shadow(1px 1px 2px white);
 }
-.menu a{
+
+.menu a {
     padding: 0px 10px;
     text-decoration: none;
-    color: #dd8404;   
+    color: #9b6827;
     font-size: medium;
+
+    text-shadow: 0px 0px 0px grey;
 }
 
-.menu a:hover{
-    color: aliceblue;
+.menu a:hover {
+    text-shadow: 1px 1px 4px grey;
+    /* color: aliceblue; */
 }
-
-
