--- a/src/components/ProductDetails/ProductDetails.css
+++ b/src/components/ProductDetails/ProductDetails.css
@@ -2,15 +2,10 @@
     margin-top: 150px;    
     gap: 10px;
 }
-.card-image{
-    /* flex-grow: 0.5; */
-}
-.card-title{
-    /* flex-grow: 0.5; */
-}
-
-
-
 .normal-text{
     font-weight: normal;
+}
+.cart-buy-btn{
+    flex-grow: 0.5;
+    box-shadow: 5px 5px 10px gray;
 }
