--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,13 +4,14 @@
 
 .logo-img {
     height: 'auto';
-    width: 70px;
+    width: 100px;
     /* filter: drop-shadow(5px 5px 10px grey); */
     cursor: pointer;
+    filter: drop-shadow(1px 1px 0px white);
 }
 
 .logo-img:hover {
-    filter: drop-shadow(1px 1px 2px white);
+    filter: drop-shadow(0.5px 0.5px 0px white);
 }
 
 .menu a {
@@ -25,4 +26,85 @@
 .menu a:hover {
     text-shadow: 1px 1px 4px grey;
     /* color: aliceblue; */
+}
+
+.drawer a {
+    text-decoration: none;
+    font-size: medium;
+    color: black;
+    text-indent: 15px;
+}
+
+.drawer a:hover {
+    text-shadow: 1px 1px 4px black;
+    /* color: aliceblue; */
+}
+
+.account-box {
+    padding: 0px 10px;
+}
+
+.account-box button {
+    text-decoration: none;
+    color: black;
+    background-color: #9b6827;
+    margin: 5px 0px;
+    width: 200px;
+}
+
+.account a {
+    color: #9b6827;
+    font-size: smaller;
+}
+
+.snack-bar {
+    /* border-bottom: 5px solid #9b6827; */
+    /* border-bottom-style: groove; */
+    width: 200px;
+    background-color: #9b6827 !important;
+    animation-name: bounce;
+    animation-duration: 3.2s;
+    animation-timing-function: linear;
+    /* animation-iteration-count: infinite; */
+    &:hover {
+        animation-play-state: paused;
+    }
+}
+.snack-close-btn{
+    /* margin-top: 10px!important; */
+}
+
+.snack-bar::after {
+    content: '';
+    margin-bottom: -45px;
+    margin-left: -130px;
+    margin-right: -16px;
+    /* z-index: 1000; */
+    background: black;
+    width: 230px;
+    height: 3px;
+    transition: width 2s ease;
+    animation: border 3.2s;
+    &:hover {
+        animation-play-state: paused;
+    }
+}
+
+@keyframes bounce {
+    0% {transform: translateX(-200%);}    
+    10% {transform: translateX(0%);}
+    15% {transform: translateX(-4%);}
+    20% {transform: translateX(0%);}
+    25% {transform: translateX(-3%);}
+    30% {transform: translateX(0%);}
+    35% {transform: translateX(-2%);}
+    40% {transform: translateX(0%);}
+    45% {transform: translateX(-1%);}
+    50% {transform: translateX(0%);}
+    90% {transform: translateX(0%);}
+    100% {transform: translateX(-200%);}
+}
+@keyframes border{
+    0% {width: 0px;}
+    100% {width: 250px;}
 }
